--- a/docs/style.css
+++ b/docs/style.css
@@ -949,6 +949,10 @@ video {
   height: 250px;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .max-h-\[90vh\] {
   max-height: 90vh;
 }
@@ -1042,6 +1046,26 @@ video {
   width: fit-content;
 }
 
+.w-0\.5 {
+  width: 0.125rem;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[80vw\] {
+  width: 80vw;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
+.w-\[70vw\] {
+  width: 70vw;
+}
+
 .min-w-\[3rem\] {
   min-width: 3rem;
 }
@@ -1080,6 +1104,10 @@ video {
 
 .max-w-5xl {
   max-width: 64rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -1986,6 +2014,16 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -2004,6 +2042,10 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -2788,6 +2830,10 @@ video {
     height: 1.25rem;
   }
 
+  .sm\:h-64 {
+    height: 16rem;
+  }
+
   .sm\:min-h-\[56px\] {
     min-height: 56px;
   }
@@ -2810,6 +2856,10 @@ video {
 
   .sm\:w-5 {
     width: 1.25rem;
+  }
+
+  .sm\:w-\[70\%\] {
+    width: 70%;
   }
 
   .sm\:grid-cols-2 {
@@ -3031,6 +3081,26 @@ video {
     padding-bottom: 4rem;
   }
 
+  .md\:px-3\.5 {
+    padding-left: 0.875rem;
+    padding-right: 0.875rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .md\:pt-4 {
     padding-top: 1rem;
   }
@@ -3063,6 +3133,16 @@ video {
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -3120,6 +3200,16 @@ video {
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
