--- a/docs/style.css
+++ b/docs/style.css
@@ -712,6 +712,14 @@ video {
   left: 0.75rem;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
